--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "type": "package",
     "description": "A Laravel package that integrates the Pesapal API",
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^10.0"
+        "php": "^8.0",
+        "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
